# caltib

./: .gitignore  404.html  ARCHITECTURE.md  LICENSE  NOTES.md  README.md  TODO.md  app.html  app_logic.py  caltib-0.3.2-py3-none-any.whl  diag.html  index.html  mkdocs.yml  objects.inv  offsets.csv  offsets_raw.csv  project_structure.txt  pyproject.toml
.github/workflows/: docs.yml  publish.yml
api/: index.html
docs/: api.html  api.md  app.css  app.html  app_logic.py  caltib-0.1.0-py3-none-any.whl  caltib-0.3.2-py3-none-any.whl  cli.html  diag.css  diag.html  diag_logic.py  index.html  index.md  library.html  library.md  reforms.html  reforms.md  style.css  tools.html  tools.md  traditions.html  traditions.md
docs/stylesheets/: extra.css  style.css
reforms/: index.html
src/caltib/: __init__.py  _bootstrap.py  api.py  api_init.py  bootstrap.py  cli.py  i18n.py
src/caltib/attributes/: __init__.py  registry.py  standard.py
src/caltib/core/: engine.py  errors.py  time.py  types.py
src/caltib/design/: dyadic_params.py  float_params.py  int_tables.py  minimax_polys.py  month_constants.py  pade_arctan.py  rational_params.py  sine_tables.py
src/caltib/diagnostics/: __init__.py  analysis.py  anomaly.py  anomaly_elong.py  anomaly_forward.py  anomaly_sun.py  assign_day.py  assign_month.py  compare_sunrise.py  compare_to_l5.py  drift.py  drift_quad.py  epoch_analysis.py  equinox.py  leap_months.py  losar_scatter.py  new_years_table.py  offsets.py  planets.py  pretty_month.py  round_trip.py  solar_lon.py
src/caltib/engines/: _deltat.py  _fundamental.py  _series.py  _solver.py  _sunrise.py  _trans.py  arithmetic_day.py  arithmetic_month.py  calendar.py  factory.py  (+15 more)
stylesheets/: app.css
tests/: analysis_trads.py  anomaly_forward.py  bench_sec_drift.py  bench_solve.py  diagnose_anomaly_l14.py  diagnose_l2.py  drift_quad_fit.py  drift_trads.py  epoch_shift.py  equinox_trads.py  losar_list.py  plot_deltat.py  pretty_month.py  round_trip.py  sky.py  test_astro_args.py  test_astro_args_b.py  test_events.py  test_float_series.py  test_sunrise.py  test_time_scales.py  test_time_scales_b.py  trad_parser.py  tradplantables.py
tools/: index.html
traditions/: index.html
(+46 files in other folders)
