[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "caltib"
version = "0.1.0"
description = "Tibetan calendar toolkit (traditional + reform engines)."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "caltib contributors"}]
dependencies = []

[project.optional-dependencies]
full = ["caltib[diagnostics,ephemeris]"]
diagnostics = ["numpy>=1.24", "pandas>=2", "matplotlib>=3.8"]
ephemeris = ["skyfield>=1.45", "jplephem>=2.21"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.8", "build>=1.2", "twine>=5"]

[project.scripts]
caltib = "caltib.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/caltib"]

[tool.hatch.build.targets.wheel.force-include]
"src/caltib/reference/data/deltat_iers_monthly.csv" = "caltib/reference/data/deltat_iers_monthly.csv"
